<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="4dp"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >
        <TextView
            android:id="@+id/bill_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/bill_time" />

        <TextView
            android:id="@+id/bill_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/bill_date"/>


    </LinearLayout>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/progile_icon"
        />

    <TextView
        android:id="@+id/consumer_name"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/consumer_name"
        android:gravity="center"
        android:padding="6dp"
        />

    <TextView
        android:id="@+id/bill_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bill_amount"
        android:gravity="end"

        />



</LinearLayout>